// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel Should not render component child components without content 1`] = `
<div
  class="container-fluid-1280 mt-4"
>
  <div
    class="panel panel-secondary"
  />
</div>
`;

exports[`Panel Should render class passed by props 1`] = `
<div
  class="panel-header"
>
  <div>
    Header
  </div>
</div>
`;

exports[`Panel Should render component 1`] = `
<Panel>
  <div
    className="container-fluid-1280 mt-4"
  >
    <div
      className="panel panel-secondary"
    >
      <Header>
        <div
          className="panel-header"
        >
          <div>
            Header
          </div>
        </div>
      </Header>
      <Body>
        <div
          className="panel-body"
        >
          Body
        </div>
      </Body>
      <Footer
        label="Footer Label"
      >
        <div
          className="panel-footer"
        >
          <div>
            Footer Label
          </div>
          <div>
            Footer
          </div>
        </div>
      </Footer>
    </div>
  </div>
</Panel>
`;

exports[`Panel Should render header with title 1`] = `
<div
  class="panel-header"
>
  <div
    class="panel-title"
  >
    Lorem Ipsum
  </div>
  <div>
    Header
  </div>
</div>
`;
